minor modification to index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
     </div>
     <div class="row">
       <div class="col-md-4 col-md-offset-1 side-list">
-        <div class="point-counter"><span class="count-highlight">{{total}}</span> Parklets Found</div>
+        <div class="point-counter"><span class="count-highlight">{{total}}</span> REDD Properties</div>
         <div class="list-group" id="listings">
           <div class="list-group-container">
         {% assign count = 0 %}{% for page in site.pages %}
