--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
             <button class="list-group-item" data-target="#{{count}}">{{ page.title }} <p class="address">{{page.address}}</p></button>
             <div id="{{count}}" class="collapse">
               <div class="details">
-                <a href="{{ page.url }}" class="pull-right"><strong>More Info ></strong></a>
+                <a href="{{ page.linky }}" class="pull-right"><strong>More Info ></strong></a>
                 <p><strong>Installed:</strong> {{ page.install_date }}</p>
                 <img src="{{relative}}images/{{ page.image }}" class="sidebar" />
               </div>
