changed installed to completed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
             <div id="{{count}}" class="collapse">
               <div class="details">
                 <a href="{{ page.linky }}" class="pull-right"><strong>More Info ></strong></a>
-                <p><strong>Installed:</strong> {{ page.install_date }}</p>
+                <p><strong>Completed:</strong> {{ page.install_date }}</p>
                 <img src="{{relative}}images/{{ page.image }}" class="sidebar" />
               </div>
             </div>
